--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@clerk/themes": "^2.2.3",
+    "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^3.9.1",
@@ -24,6 +25,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
@@ -31,15 +33,17 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.18.2",
     "framer-motion": "^11.15.0",
     "hono": "^4.6.15",
     "jotai": "^2.11.0",
     "lucide-react": "^0.469.0",
-    "motion": "^11.15.0",
+    "motion": "^11.17.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
@@ -48,12 +52,16 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-slider": "^2.0.6",
     "react-use": "^17.6.0",
+    "spotify-to-yt": "^1.1.1",
+    "spotify-web-api-node": "^5.0.2",
     "stream": "^0.0.3",
+    "superagent": "^10.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "youtube-music-apis": "^1.0.4",
+    "youtube-music-apis": "^1.0.6",
     "youtube-player": "^5.6.0",
     "ytmusic-api": "^5.2.2",
     "zod": "^3.24.1",
@@ -64,6 +72,8 @@
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
+    "@types/react-slider": "^1.3.6",
+    "@types/spotify-web-api-node": "^5.0.11",
     "@types/youtube-player": "^5.5.11",
     "@types/yt-search": "^2.10.3",
     "eslint": "^8",
