--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@clerk/nextjs": "^6.9.6",
     "@clerk/themes": "^2.2.3",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
+    "@heroui/image": "2.2.6",
+    "@heroui/react": "^2.6.14",
+    "@heroui/system": "2.4.7",
+    "@heroui/theme": "2.4.6",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^3.9.1",
-    "@nextui-org/image": "^2.2.4",
-    "@nextui-org/react": "^2.6.10",
-    "@nextui-org/system": "^2.4.5",
-    "@nextui-org/theme": "^2.4.4",
+    "@kinde-oss/kinde-auth-nextjs": "^2.5.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-context-menu": "^2.2.4",
@@ -43,7 +44,7 @@
     "hono": "^4.6.15",
     "jotai": "^2.11.0",
     "lucide-react": "^0.469.0",
-    "motion": "^11.17.0",
+    "motion": "^12.4.7",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
@@ -52,15 +53,16 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-select": "^5.9.0",
     "react-slider": "^2.0.6",
     "react-use": "^17.6.0",
-    "spotify-to-yt": "^1.1.1",
     "spotify-web-api-node": "^5.0.2",
     "stream": "^0.0.3",
     "superagent": "^10.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "youtube-captions-scraper": "^2.0.3",
     "youtube-music-apis": "^1.0.6",
     "youtube-player": "^5.6.0",
     "ytmusic-api": "^5.2.2",
@@ -79,6 +81,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
